--- a/02 - flex-direction/style.css
+++ b/02 - flex-direction/style.css
@@ -49,5 +49,7 @@
 
 /* Lektionen starter her. */
 .flex-container {
-
+  display: flex;
+  border: 10px solid #000;
+  flex-direction: column-reverse;
 }
