--- a/05 - justify-content/style.css
+++ b/05 - justify-content/style.css
@@ -49,5 +49,9 @@
 
 /* Lektionen starter her. */
 .flex-container {
-
+  display: flex;
+  height: 100vh;
+  border: 10px solid #000;
+  flex-direction: column;
+  justify-content: space-between;
 }
