--- a/04 - flex order/style.css
+++ b/04 - flex order/style.css
@@ -49,17 +49,19 @@
 
 /* Lektionen starter her. */
 .flex-container {
-
+  display: flex;
+  border: 10px solid #000;
+  flex-direction: row;
 }
 
 .box4 {
-
+  order: 2;
 }
 
 .box2 {
-
+  order: 3;
 }
 
 .box7 {
-
+  order: 1;
 }
