--- a/06 - align-items/style.css
+++ b/06 - align-items/style.css
@@ -49,17 +49,9 @@
 
 /* Lektionen starter her. */
 .flex-container {
-
-}
-
-.box5 {
- 
-}
-
-.box4 {
-
-}
-
-.box8 {
-  
+  display: flex;
+  border: 10px solid #000;
+  height: 100vh;
+  align-items: center;
+  flex-direction: column;
 }
