--- a/08 - align-self/style.css
+++ b/08 - align-self/style.css
@@ -49,9 +49,12 @@
 
 /* Lektionen starter her. */
 .flex-container {
-
+  display: flex;
+  border: 10px solid #000;
+  height: 100vh;
+  align-items: center;
 }
 
 .box4 {
-
+  align-self: stretch;
 }
