--- a/09 - flex size/style.css
+++ b/09 - flex size/style.css
@@ -49,17 +49,18 @@
 
 /* Lektionen starter her. */
 .flex-container {
-
+  display: flex;
+  border: 10px solid #000;
 }
 
 .flex-item {
-
+  flex: 1;
 }
 
 .box2 {
-
+  flex: 2;
 }
 
 .box5 {
-
+  flex: 4;
 }
