--- a/10 - flex-grow, flex-shrink, flex-basis/style.css
+++ b/10 - flex-grow, flex-shrink, flex-basis/style.css
@@ -49,13 +49,17 @@
 
 /* Lektionen starter her. */
 .flex-container {
+  display: flex;
+  border: 10px solid #000;
+}
 
+.flex-item {
 }
 
 .box1 {
-
+  flex: 2 1 500px;
 }
 
 .box2 {
-  
+  flex: 1 10 500px;
 }
